assert-struct/tests/snapshots/regex__regex_pattern.snap
---
source: assert-struct/tests/regex.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/regex_errors/regex_pattern.rs:15:19
   |
15 |         email: =~ r"@example\.com$",
   |                   ^^^^^^^^^^^^^^^^^ got "alice@wrong.com"
